grammar.js
    source_file: ($) => repeat($._item),

    //*****************************************************************************
    // ITEMS
    //*****************************************************************************

    _item: ($) =>
      choice(
        $.function_def,
        $.struct_def,
        $.enum_def,
        $.codec_def,
        $.macro_def,
        $.const_def,
        $.static_def,
        $.category_def,
        $.extend_def,
        $.extern_def,
        $.import_decl,
        $.mod_decl,
        $.attribute,
      ),

    //*****************************************************************************
    // FUNCTIONS
    //*****************************************************************************

    function_def: ($) =>
      seq(
        optional($.visibility),
        "fn",
        field("name", $.identifier),
        optional($.generic_params),
        $.param_list,
        optional(seq("->", field("return_type", $._type))),
        choice($.block, ";"),
      ),

    param_list: ($) => seq("[", optional(commaSep($._param)), "]"),

    _param: ($) => choice($.self_param, $.parameter),

    struct_def: ($) =>
      seq(
        optional($.visibility),
        "struct",
        field("name", $.identifier),
        optional($.generic_params),
        $.field_list,
        optional(";"),
      ),

    field_list: ($) => seq("[", optional(commaSep($.field)), "]"),

    field: ($) =>
      seq(
        optional($.visibility),
        field("name", $.identifier),
        ":",
        field("type", $._type),
      ),

    //*****************************************************************************
    // ENUMS
    //*****************************************************************************

    macro_def: ($) =>
      seq(
        optional($.visibility),
        "macro",
        field("name", $.identifier),
        "{",
        optional($.macro_body),
        "}",
        optional(";"),
      ),

    macro_body: ($) => repeat1($._macro_token),

    _macro_token: ($) =>
      choice(
        seq("{", optional($.macro_body), "}"),
        $.identifier,
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.char_literal,
        $.bool_literal,
        $.null_literal,
        $.undefined_literal,
        $.primitive_type,
        $._macro_punct,
      ),

    const_def: ($) =>
      seq(
        optional($.visibility),
        "const",
        field("name", $.identifier),
        ":",
        field("type", $._type),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),

    var_statement: ($) =>
      seq(
        "var",
        optional("mut"),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),

    //*****************************************************************************
    // CATEGORY / EXTEND
    //*****************************************************************************

    _type: ($) =>
      choice(
        $.primitive_type,
        $._type_identifier,
        $.generic_type,
        $.pointer_type,
        $.array_type,
      ),

    primitive_type: ($) =>
      choice(
        "bool",
        "char",
        "str",
        "ptr",
        "type",
        "scope",
        "u8",
        "u16",
        "u32",
        "u64",
        "usize",
        "i8",
        "i16",
        "i32",
        "i64",
        "isize",
        "f4",
        "f8",
        "f16",
        "f32",
        "f64",
        "vec2",
        "vec3",
        "vec4",
        "ivec2",
        "ivec3",
        "ivec4",
        "uvec2",
        "uvec3",
        "uvec4",
        "bvec2",
        "bvec3",
        "bvec4",
        "mat2",
        "mat3",
        "mat4",
        "vec8",
        "quat",
        "dmat2",
        "dmat3",
        "dmat4",
      ),

    generic_type: ($) =>
      prec(1, seq(field("name", $.identifier), "<", commaSep1($._type), ">")),

    pointer_type: ($) => seq("*", $._type),

    array_type: ($) => seq("[", $._expression, "]", $._type),

    //*****************************************************************************
    // GENERICS
    //*****************************************************************************

    generic_params: ($) => seq("<", commaSep1($.generic_param), ">"),

    generic_param: ($) =>
      seq($.identifier, optional(seq(":", $.type_constraint))),

    block: ($) => seq("{", repeat($._statement), "}"),

    _statement: ($) =>
      choice(
        $.var_statement,
        $.expression_statement,
        $.return_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.loop_statement,
        $.match_statement,
        $.break_statement,
        $.continue_statement,
        $.block,
      ),

    expression_statement: ($) => seq($._expression, ";"),

    return_statement: ($) => seq("return", optional($._expression), ";"),

    break_statement: ($) => seq("break", ";"),

    continue_statement: ($) => seq("continue", ";"),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        field("consequence", $.block),
        optional(
          seq("else", field("alternative", choice($.if_statement, $.block))),
        ),
      ),

    while_statement: ($) =>
      seq("while", field("condition", $._expression), field("body", $.block)),

    for_statement: ($) =>
      seq(
        "for",
        field("variable", $.identifier),
        "in",
        field("iterator", $._expression),
        field("body", $.block),
      ),

    loop_statement: ($) => seq("loop", $.block),

    match_statement: ($) =>
      seq(
        "match",
        field("value", $._expression),
        "[",
        commaSep($.match_arm),
        "]",
      ),

    match_arm: ($) =>
      seq(
        $.pattern,
        optional(seq("if", field("guard", $._expression))),
        "=>",
        choice($._expression, $.block),
      ),

    pattern: ($) =>
      choice(
        $.pattern_identifier,
        $.integer_literal,
        $.string_literal,
        $.char_literal,
        $.bool_literal,
        $.range_pattern,
        $.constructor_pattern,
        "_",
      ),

    range_pattern: ($) =>
      prec(1, seq($.integer_literal, "..", $.integer_literal)),

    constructor_pattern: ($) =>
      prec(
        1,
        seq(
          sep1($.identifier, "::"),
          optional(seq("(", optional(commaSep($.pattern)), ")")),
        ),
      ),

    //*****************************************************************************
    // EXPRESSIONS
    //*****************************************************************************

    _expression: ($) =>
      choice(
        $.identifier,
        $._literal,
        $.unary_expression,
        $.binary_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.cast_expression,
        $.struct_literal,
        $.array_literal,
        $.range_expression,
        $.if_expression,
        $.match_expression,
        $.grouped_expression,
        $.path_expression,
        $.comptime_expression,
      ),

    binary_expression: ($) =>
      choice(
        prec.right(
          1,
          seq(
            $._expression,
            choice("=", "+=", "-=", "*=", "/=", "%=", "&=", "|=", "^=", "<<=", ">>="),
            $._expression,
          ),
        ),
        prec.left(2, seq($._expression, "||", $._expression)),
        prec.left(3, seq($._expression, "&&", $._expression)),
        prec.left(4, seq($._expression, choice("|", "^", "&"), $._expression)),
        prec.left(5, seq($._expression, choice("==", "!="), $._expression)),
        prec.left(
          6,
          seq($._expression, choice("<", ">", "<=", ">="), $._expression),
        ),
        prec.left(7, seq($._expression, choice("<<", ">>"), $._expression)),
        prec.left(8, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(9, seq($._expression, choice("*", "/", "%"), $._expression)),
        prec.left(10, seq($._expression, "++", $._expression)),
      ),

    call_expression: ($) =>
      prec(
        11,
        seq(
          field("function", $._expression),
          "(",
          optional(commaSep($._expression)),
          ")",
        ),
      ),

    range_expression: ($) =>
      prec.left(5, seq($._expression, choice("..", "..="), $._expression)),

    integer_literal: ($) =>
      token(
        seq(
          choice(/[0-9][0-9_]*/, /0x[0-9a-fA-F_]+/, /0b[01_]+/, /0o[0-7_]+/),
          optional(/[uif](?:8|16|32|64|size)?/),
        ),
      ),

    float_literal: ($) =>
      token(
        seq(
          /[0-9][0-9_]*/,
          choice(
            seq(".", /[0-9][0-9_]*/),
            seq(/[eE][+-]?/, /[0-9][0-9_]*/),
            seq(".", /[0-9][0-9_]*/, /[eE][+-]?/, /[0-9][0-9_]*/),
          ),
          optional(/f(?:16|32|64)?/),
        ),
      ),

    string_literal: ($) =>
      seq('"', repeat(choice(/[^"\\]+/, $.escape_sequence)), '"'),

    char_literal: ($) => seq("'", choice(/[^'\\]/, $.escape_sequence), "'"),

    escape_sequence: ($) =>
      token.immediate(
        seq("\\", choice(/[\\'"nrt0]/, /x[0-9a-fA-F]{2}/, /u\{[0-9a-fA-F]+\}/)),
      ),

    bool_literal: ($) => choice("true", "false"),

    null_literal: ($) => "null",

    undefined_literal: ($) => "undefined",

    //*****************************************************************************
    // MISC
    //*****************************************************************************

    visibility: ($) => "pub",

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
