test/corpus/structs.txt
==========
Simple struct
==========

struct Point [
    x: f32,
    y: f32,
]

---

(source_file
  (struct_def
    name: (identifier)
    (field_list
      (field
        name: (identifier)
        type: (primitive_type))
      (field
        name: (identifier)
        type: (primitive_type)))))

==========
Empty struct
==========

struct Empty []

---

(source_file
  (struct_def
    name: (identifier)
    (field_list)))

==========
Struct with visibility
==========

pub struct Visible [
    pub x: i32,
]

---

(source_file
  (struct_def
    (visibility)
    name: (identifier)
    (field_list
      (field
        (visibility)
        name: (identifier)
        type: (primitive_type)))))

==========
Struct with generic params
==========

struct Container<T> [
    value: T,
]

---

(source_file
  (struct_def
    name: (identifier)
    (generic_params
      (generic_param
        (identifier)))
    (field_list
      (field
        name: (identifier)
        type: (type_identifier)))))

==========
Struct with complex types
==========

struct Complex [
    data: *u8,
    items: Vec<i32>,
]

---

(source_file
  (struct_def
    name: (identifier)
    (field_list
      (field
        name: (identifier)
        type: (pointer_type
          (primitive_type)))
      (field
        name: (identifier)
        type: (generic_type
          name: (identifier)
          (primitive_type))))))
